Fixed View on small screens

--- a/style.css
+++ b/style.css
@@ -238,6 +238,10 @@ body {
 }
 
 @media (max-width: 1200px) and (min-width: 600px) {
+	.container .app {
+		min-width: 90%;
+	}
+
 	.container .app .todo-head {
 		width: 90%;
 	}
@@ -251,6 +255,11 @@ body {
 		left: 60%;
 	}
 
+	.container .app .todos ul li i {
+		opacity: 1;
+		right: 5px;
+	}
+
 	.new-todo {
 		width: 50%;
 	}
@@ -262,5 +271,35 @@ body {
 	.new-todo i {
 		top: 25px;
 		left: 84%;
+	}
+}
+
+@media (max-width: 600px) {
+	.container .app {
+		min-width: 100%;
+	}
+
+	.container .app .todo-head {
+		width: 100%;
+	}
+
+	.container .app .todos {
+		width: 100%;
+		padding: 10px;
+	}
+
+	.container .app .todos .add-todo {
+		left: 80%;
+		width: 50px;
+		height: 50px;
+	}
+
+	.container .app .todos .add-todo h3 {
+		display: none;
+	}
+
+	.container .app .todos ul li i {
+		opacity: 1;
+		right: 5px;
 	}
 }
